--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,11 +2,17 @@ html, body {
     height: 100%;
 }
 
+body {
+    max-width: 1500px;
+}
+
 main {
     height: 95%;
 }
 
-
+#result {
+    text-align: center;
+}
 
 main div {
     margin-top: 10px;
@@ -17,4 +23,8 @@ section {
     border: 2px solid black;
     border-radius: 5px;
     margin: auto;
+}
+
+label {
+    margin-left: 10px;
 }
