--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -53,3 +53,16 @@ ul {
     text-align: center;
     padding: 0;
 }
+
+li {
+    padding: 0;
+    font-size: large;
+}
+
+li:hover {
+    border-radius: 3px;
+    cursor: pointer;
+    background-color: #007bffe3;
+    color: white;
+
+}
