changed some styles

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -29,21 +29,6 @@ section {
     margin: auto;
 }
 
-.window {
-    /* border: .5px solid #00eeff62; */
-    
-    padding: 1.5em;
-    text-align: center;
-    background-color: #00eeff62;
-}
-
-.window-bottom {
-    border-radius: 0px 0px 5px 5px;
-}
-
-.window-top {
-    border-radius: 5px 5px 0px 0px;
-}
 
 .displayWindow {
     background-color: white;
@@ -84,3 +69,23 @@ li:hover {
 #outputSection {
     padding: 0;
 }
+
+.window {
+    /* border: .5px solid #00eeff62; */
+    
+    padding: 1.5em;
+    text-align: center;
+    background-color: #00eeff62;
+}
+@media only screen and (max-width: 770px) {
+        .window-bottom {
+        border-radius: 0px 0px 5px 5px;
+    }
+
+    .window-top {
+        border-radius: 5px 5px 0px 0px;
+    }
+}
+
+
+
