--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -30,16 +30,16 @@ section {
 }
 
 .window {
-    /* border: .5px solid #00eeff62; */
     
     padding: 1.5em;
     text-align: center;
-    background-color: #00eeff62;
+    /* background-color: #00eeff62; */
 }
 
 
 .displayWindow {
     background-color: white;
+    border: .5px solid darkgray;
 }
 
 label {
