--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -78,16 +78,7 @@ li:hover {
     padding: 0;
 }
 
-
-@media only screen and (max-width: 770px) {
-    .window-bottom {
-        border-radius: 0px 0px 5px 5px;
-    }
-
-    .window-top {
-        border-radius: 5px 5px 0px 0px;
-    }
+button {
+    margin-top: 10px;
 }
-
-
 
